--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.jberet</groupId>
         <artifactId>jberet-parent</artifactId>
-        <version>2.2.1-SNAPSHOT</version>
+        <version>2.2.0.Final</version>
         <relativePath/>
     </parent>
 
@@ -20,7 +20,7 @@
     <properties>
         <version.jakarta.batch-api>2.1.1</version.jakarta.batch-api>
         <version.jberet>2.2.0.Final</version.jberet>
-        <version.jberet.support>2.1.3.Final-SNAPSHOT</version.jberet.support>
+        <version.jberet.support>2.1.2.Final</version.jberet.support>
         <version.jakarta-transaction-api>2.0.1</version.jakarta-transaction-api>
         <version.org.jboss.weld.weld-se>5.1.2.Final</version.org.jboss.weld.weld-se>
         <version.jakarta.validation-api>3.0.2</version.jakarta.validation-api>
