--- a/jpa/pom.xml
+++ b/jpa/pom.xml
@@ -17,7 +17,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <version.maven.wildfly.plugin>4.0.0.Final</version.maven.wildfly.plugin>
+        <version.maven.wildfly.plugin>5.0.0.Beta2</version.maven.wildfly.plugin>
     </properties>
 
     <dependencies>
