--- a/jpa/pom.xml
+++ b/jpa/pom.xml
@@ -28,80 +28,18 @@
         <dependency>
             <groupId>jakarta.batch</groupId>
             <artifactId>jakarta.batch-api</artifactId>
+            <scope>provided</scope>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>jakarta.transaction</groupId>-->
-        <!--            <artifactId>jakarta.transaction-api</artifactId>-->
-        <!--        </dependency>-->
         <dependency>
             <groupId>org.jberet</groupId>
             <artifactId>jberet-core</artifactId>
-        </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>org.jberet</groupId>-->
-        <!--            <artifactId>jberet-se</artifactId>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>org.jboss.weld</groupId>-->
-        <!--            <artifactId>weld-core-impl</artifactId>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>org.jboss.weld.se</groupId>-->
-        <!--            <artifactId>weld-se-core</artifactId>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>jakarta.validation</groupId>-->
-        <!--            <artifactId>jakarta.validation-api</artifactId>-->
-        <!--            <version>${version.jakarta.validation-api}</version>-->
-        <!--        </dependency>-->
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.jberet</groupId>
-            <artifactId>jberet-jpa-repository</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>jakarta.persistence</groupId>
-            <artifactId>jakarta.persistence-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate.orm</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.jboss</groupId>
-                    <artifactId>jandex</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>io.smallrye</groupId>
-            <artifactId>jandex</artifactId>
-        </dependency>
-
-        <!--        <dependency>-->
-        <!--            <groupId>org.jboss.weld.module</groupId>-->
-        <!--            <artifactId>weld-jta</artifactId>-->
-        <!--            <scope>test</scope>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>org.jboss.narayana.jta</groupId>-->
-        <!--            <artifactId>narayana-jta</artifactId>-->
-        <!--            <exclusions>-->
-        <!--                <exclusion>-->
-        <!--                    <groupId>org.jboss.logmanager</groupId>-->
-        <!--                    <artifactId>jboss-logmanager</artifactId>-->
-        <!--                </exclusion>-->
-        <!--            </exclusions>-->
-        <!--            <scope>test</scope>-->
-        <!--        </dependency>-->
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
