--- a/simple/pom.xml
+++ b/simple/pom.xml
@@ -29,6 +29,7 @@
             <groupId>org.jberet</groupId>
             <artifactId>jberet-core</artifactId>
         </dependency>
+        <!-- jberet-se/src/main/resources/META-INF/services/org.jberet.spi.BatchEnvironment -->
         <dependency>
             <groupId>org.jberet</groupId>
             <artifactId>jberet-se</artifactId>
