rename to standalone

--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     </properties>
 
     <modules>
-        <module>simple</module>
+        <module>standalone</module>
         <module>deployment</module>
     </modules>
 
@@ -68,16 +68,7 @@
                 <artifactId>jberet-se</artifactId>
                 <version>${version.jberet}</version>
             </dependency>
-            <dependency>
-                <groupId>org.jboss.weld</groupId>
-                <artifactId>weld-core-impl</artifactId>
-                <version>${version.org.jboss.weld.weld}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.weld.se</groupId>
-                <artifactId>weld-se-core</artifactId>
-                <version>${version.org.jboss.weld.weld-se}</version>
-            </dependency>
+
             <!--        <dependency>-->
             <!--            <groupId>jakarta.validation</groupId>-->
             <!--            <artifactId>jakarta.validation-api</artifactId>-->
