add postgresql repo support

--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -63,5 +63,12 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${version.junit}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.4</version>
+            <scope>optional</scope>
+        </dependency>
     </dependencies>
 </project>
