--- a/standalone/src/main/resources/jberet.properties
+++ b/standalone/src/main/resources/jberet.properties
@@ -2,4 +2,15 @@
 job-repository-type = jdbc
 db-url = jdbc:h2:./target/jberet-repo
 
+# postgres=# create user batch_user with password '123';
+# CREATE ROLE
+# postgres=# create database batch_db owner batch_user
+# postgres-# ;
+# CREATE DATABASE
+# ------------------------------
+
+# db-url = jdbc:postgresql://localhost:5432/batch_db
+# db-user = batch_user
+# db-password = 123
+
 
